[tool.poetry]
name = "onlydust-star-tracker"
version = "0.1.0"
description = ""
authors = ["Omar U. Espejel <espejelomar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
pyyaml = "^6.0.2"
pycountry = "^24.6.1"
orjson = "^3.10.11"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
